--- a/css/style.css
+++ b/css/style.css
@@ -103,18 +103,12 @@ h1, h2, h3, p {
   display: block;
   width: 24px;
   height: 24px;
+  color: #fff;
+  transition: color .3s ease-in-out;
 }
 
-.social__link_fb {
-  background-image: url(../img/facebook.svg);
-}
-
-.social__link_twitter {
-  background-image: url(../img/twitter.svg);
-}
-
-.social__link_inst {
-  background-image: url(../img/instagram.svg);
+.social__link:hover {
+  color: #E90000;
 }
 
 .burger {
@@ -184,6 +178,7 @@ h1, h2, h3, p {
 }
 
 .main {
+  position: relative;
   flex-grow: 1;
 }
 
@@ -206,6 +201,8 @@ h1, h2, h3, p {
 }
 
 .footer {
+  position: relative;
+  z-index: 500;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -225,6 +222,66 @@ h1, h2, h3, p {
 .footer__copyright {
   color: #6A6A6A;
 }
+
+.main__slider {
+  height: calc(100% - 120px);
+}
+
+.slider-main {
+  height: 100%;
+}
+.slider-main__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pagination {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 400;
+  padding-bottom: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
+  min-height: 144px;
+  padding-top: 12px;
+  background-color: #000;
+}
+
+.pagination__arrow {
+  display: block;
+  width: 0;
+  height: 0;
+  margin: 0 auto 20px;
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  border-bottom: 6px solid transparent;
+  border-top: 6px solid #fff;
+  background-color: transparent;
+  transition: border-color .3s ease-in-out;
+}
+
+.pagination__arrow:hover {
+  border-top-color: #E90000;
+}
+
+.slider-thumbs {
+  max-width: 820px;
+}
+
+.slider-thumbs__list {
+  display: flex;
+  align-items: center;
+}
+
+.slider-main__video {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+
 
 @media (max-width: 1024px) {
   .mute {
@@ -335,5 +392,13 @@ h1, h2, h3, p {
   .footer {
     font-size: 6px;
     line-height: 7px;
+  }
+
+  .pagination {
+    min-height: 80px;
+  }
+
+  .pagination__arrow {
+    margin-bottom: 6px;
   }
 }
