--- a/css/style.css
+++ b/css/style.css
@@ -62,11 +62,13 @@ h1, h2, h3, p {
 
 .header {
   position: relative;
+  height: 50px;
   padding-top: 9px;
   padding-bottom: 9px;
 }
 
 .navigation {
+  z-index: 600;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -206,6 +208,7 @@ h1, h2, h3, p {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 50px;
   padding-top: 10px;
   padding-bottom: 10px;
   margin-bottom: 6px;
@@ -224,7 +227,9 @@ h1, h2, h3, p {
 }
 
 .main__slider {
-  height: calc(100% - 120px);
+  height: calc(100% - 100px);
+  padding-bottom: 10px;
+  overflow: hidden;
 }
 
 .slider-main {
@@ -248,6 +253,12 @@ h1, h2, h3, p {
   min-height: 144px;
   padding-top: 12px;
   background-color: #000;
+  transform: translateY(calc(100% - 25px));
+  transition: transform .5s ease-in-out;
+}
+
+.pagination_active {
+  transform: translateY(0);
 }
 
 .pagination__arrow {
@@ -257,13 +268,23 @@ h1, h2, h3, p {
   margin: 0 auto 20px;
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
-  border-bottom: 6px solid transparent;
-  border-top: 6px solid #fff;
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid #fff;
   background-color: transparent;
   transition: border-color .3s ease-in-out;
 }
 
+.pagination_active .pagination__arrow {
+  border-bottom: 6px solid transparent;
+  border-top: 6px solid #fff;
+}
+
 .pagination__arrow:hover {
+  border-bottom-color: #E90000;
+}
+
+.pagination_active .pagination__arrow:hover {
+  border-bottom-color: transparent;
   border-top-color: #E90000;
 }
 
@@ -283,6 +304,11 @@ h1, h2, h3, p {
 }
 
 
+.slider-thumbs__img {
+  max-height: 100px;
+  object-fit: cover;
+}
+
 @media (max-width: 1024px) {
   .mute {
     right: 20px;
@@ -297,7 +323,8 @@ h1, h2, h3, p {
   .header  {
     display: flex;
     align-items: center;
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   .burger {
     display: block;
